1.5/svc-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
  labels:
    app: back
spec:
  selector:
    app: backend
  ports:
    - name: back
      protocol: TCP
      port: 8080
      targetPort: 8080
