1.5/svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  selector:
    app: frontend
  ports:
    - name: front
      protocol: TCP
      port: 80
      targetPort: 80
